--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
             <div class="project-card">
                 <div class="project-media">
-                       <img src="img/sms.png"></img>
+                       <img src="sms.png"></img>
                 </div>
                 <div class="project-info">
                     <h3>Super Mario Studio</h3>
@@ -249,7 +249,7 @@
 
             <div class="project-card">
                 <div class="project-media">
-                            <img src="img/edes.png"></img>
+                            <img src="edes.png"></img>
                 </div>
                 <div class="project-info">
                     <h3>Everbloom Dreams</h3>
@@ -269,7 +269,7 @@
 
             <div class="project-card">
                 <div class="project-media">
-                    <img src="img/chcue.png"></img>
+                    <img src="chcue.png"></img>
                 </div>
                 <div class="project-info">
                     <h3>Childhood.cue</h3>
